--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,10 @@
     },
     "extends": [
         "plugin:react/recommended",
+        "plugin:flowtype/recommended",
         "airbnb"
     ],
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -17,17 +19,20 @@
     },
     "plugins": [
         "react",
-        "jest"
+        "jest",
+        "flowtype"
     ],
     "rules": {
       "arrow-body-style": ["error", "as-needed"],
+      "comma-dangle": ["error", "never"],
+      "flowtype/no-types-missing-file-annotation": 0,
       "no-restricted-exports": 0,
+      "no-multi-spaces": 0,
       "react/function-component-definition": [
         2,
         {
           "namedComponents": "arrow-function"
         }
-      ],
-      "no-multi-spaces": 0
+      ]
     }
 }
