--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint npm run flow"
+      "pre-commit": "npm run lint"
     }
   },
   "scripts": {
