--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Jest run
-        run: npm run test
+        run: |
+          npm install
+          npm run test
