--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "webpack --config config/webpack.prod.js",
     "coverage": "npm run test -- --coverage",
-    "flow": "flow",
-    "lint": "npx eslint src/components --ext .js,.jsx",
+    "lint": "npx eslint src/components --ext .js,.jsx,.ts,.tsx",
     "prepare": "husky install",
     "start": "webpack serve --config config/webpack.dev.js",
     "test": "jest",
@@ -18,10 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@jest/types": "^28.1.1",
+    "@types/node": "^18.7.9",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
@@ -29,22 +32,23 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
-    "@babel/preset-flow": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^28.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "flow-bin": "^0.180.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
@@ -53,6 +57,7 @@
     "prettier": "^2.7.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
